--- a/embed/reset.css
+++ b/embed/reset.css
@@ -1,3 +1,51 @@
+:root {
+  --base-size-2: 0.125rem;
+  --base-size-4: 0.25rem;
+  --base-size-6: 0.375rem;
+  --base-size-8: 0.5rem;
+  --base-size-12: 0.75rem;
+  --base-size-16: 1rem;
+  --base-size-20: 1.25rem;
+  --base-size-24: 1.5rem;
+  --base-size-28: 1.75rem;
+  --base-size-32: 2rem;
+  --base-size-36: 2.25rem;
+  --base-size-40: 2.5rem;
+  --base-size-44: 2.75rem;
+  --base-size-48: 3rem;
+  --base-size-64: 4rem;
+  --base-size-80: 5rem;
+  --base-size-96: 6rem;
+  --base-size-112: 7rem;
+  --base-size-128: 8rem;
+
+  --base-text-weight-light: 300;
+  --base-text-weight-normal: 400;
+  --base-text-weight-medium: 500;
+  --base-text-weight-semibold: 600;
+
+  --boxShadow-thin: inset 0 0 0 max(1px, 0.0625rem);
+  --boxShadow-thick: inset 0 0 0 max(2px, 0.125rem);
+  --boxShadow-thicker: inset 0 0 0 max(4px, 0.25rem);
+  --borderWidth-thin: max(1px, 0.0625rem);
+  --borderWidth-thick: max(2px, 0.125rem);
+  --borderWidth-thicker: max(4px, 0.25rem);
+  --borderRadius-small: 0.1875rem;
+  --borderRadius-medium: 0.375rem;
+  --borderRadius-large: 0.75rem;
+  --borderRadius-full: 624.9375rem;
+  --borderRadius-default: 0.375rem;
+  --outline-focus-offset: -0.125rem;
+  --outline-focus-width: 0.125rem;
+
+  --breakpoint-xsmall: 20rem;
+  --breakpoint-small: 34rem;
+  --breakpoint-medium: 48rem;
+  --breakpoint-large: 63.25rem;
+  --breakpoint-xlarge: 80rem;
+  --breakpoint-xxlarge: 87.5rem;
+}
+
 html,
 body {
   margin: 0;
@@ -18,4 +66,12 @@ body .gist .blob-num {
 
 .gist .gist-file:last-child {
   margin-bottom: 0;
+}
+
+.Box-body.p-5 {
+  padding: var(--base-size-32, 32px);
+}
+
+.markdown-body>*:first-child>.heading-element:first-child {
+  margin-top: 0;
 }
